[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youth-info-platform-institution-site"
version = "0.1.0"
description = "Institution portal for the youth information platform"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<5.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["institution_site_project*", "briefings*"]
