[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youth-info-platform-public-site"
version = "0.1.0"
description = "Public static-site runner for the youth information platform"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["public_site*"]
